--- a/README.rdoc
+++ b/README.rdoc
@@ -48,3 +48,6 @@ Example:
 === Inefficiencies
 
 <tt>has_many_elsewhere</tt> is certainly much less efficient than a comparable has_many relationship.  <tt>has_many :through</tt> relationships use SQL JOINs which while efficient, do not work across multiple database connections.  St. Elsewhere implements much of the same resulting API methods in code, using less efficient SQL.
+
+=== Install from gemcutter
+  gem install st-elsewhere
